fixed sticky on safari and edge

--- a/sinuosa/style.css
+++ b/sinuosa/style.css
@@ -18,23 +18,16 @@ body {
   top: -40px;
 }
 
-@media only screen and (min-width: 768px) {
-  html {
-    font-size: 18px;
-  }
-}
 
-@media only screen and (min-width: 1200px) {
-  html {
-    font-size: 21px;
-  }
-}
 
 #visualisation-container {
   -webkit-box-shadow: 0px 0px 7px 0px #fbe1b6;
       -ms-box-shadow: 0px 0px 7px 0px #fbe1b6;
           box-shadow: 0px 0px 7px 0px #fbe1b6;
   background-color: white;
+  position: -webkit-sticky;
+  position: sticky;
+  top: -40px;
 }
 
 /* visualisation */
@@ -196,5 +189,24 @@ svg#visualisation {
 
   to {
     r: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  #visualisation-container {
+    position: relative;
+    top: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  html {
+    font-size: 21px;
   }
 }
